se corrige responsividad

--- a/hoja_estilo.css
+++ b/hoja_estilo.css
@@ -53,6 +53,13 @@ section{
         width: 80vw;
         height: 50vh;
     }  
-}  
+} 
+
+@media only screen and (max-height: 800px) {
+    .grafico{
+        width: 55vw;
+        height: 45vh;
+    }  
+} 
 
 
